--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
     <script type="text/javascript" src="binaryReader.js"></script>
     <script type="text/javascript" src="shapefile.js"></script>
     <script type="text/javascript" src="shapefile_render.js"></script>
-    <script type="text/javascript">
 
+    <script type="text/javascript">
       $(document).ready (function () {
         var screen = document.getElementById ('screen');
         if (screen.getContext) {
-          var shapeFile = new ShapeFile ('shapefiles/northamerica_adm0');
-          if (shapeFile) {
-            transform2d (shapeFile);
+          try {
+            var shapeFile = new ShapeFile ('shapefiles/northamerica_adm0');
+            //var shapeFile = new ShapeFile ('shapefiles/world_borders');
+            transform (shapeFile, ll22d);
             render2d (shapeFile, screen.getContext ('2d'), "#FF0000");
+          } catch (error) {
+            console.log (error);
           }
         }
       });
