--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         if (screen.getContext) {
           try {
             var shapeFileName = "shapefiles/northamerica_adm0";
+            //var shapeFileName = "shapefiles/world_borders";
             var shapeFile = new ShapeFile (shapeFileName);
-            //var shapeFile = new ShapeFile ('shapefiles/world_borders');
             
-            transform (shapeFile, llto2d);
-            render2d (shapeFile, screen.getContext ('2d'), new Color (0xFF, 0x00, 0x00, 0x00));
+            shapeFile.eachVertex (llto2d);
+            shapeFile.eachShape (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00, 0x00));
+
           } catch (error) {
             var messages = document.getElementById ('messages');
             messages.innerHTML = error;
