--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
             //var shapeFileName = "shapefiles/world_borders";
             var shapeFile = new ShapeFile (shapeFileName);
             
-            shapeFile.eachVertex (llto2d);
+            shapeFile.eachVertex (toOrtho);
+            shapeFile.eachVertex (scale, 400);
+            shapeFile.eachVertex (shift, 400);
+            shapeFile.eachVertex (invert, 800, 1);
+            shapeFile.eachVertex (deAlias);
+
             shapeFile.eachShape (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00, 0x00));
 
           } catch (error) {
