--- a/webgl.html
+++ b/webgl.html
@@ -45,7 +45,7 @@
           shapeFile.eachShape (buildModels, [1, 0, 0]);
 
         } catch (error) {
-          var messages = document.getElementById ('messages');
+          var messages = document.getElementById ("messages");
           messages.innerHTML = error;
           console.log (error);
         }
