Changed binaryReader and prototype paths to include their new place in the external folder.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 <html>
   <head>
-    <script type="text/javascript" src="prototype.js"></script>
-    <script type="text/javascript" src="binaryReader.js"></script>
+    <script type="text/javascript" src="external/prototype.js"></script>
+    <script type="text/javascript" src="external/binaryReader.js"></script>
     <script type="text/javascript" src="shapefile.js"></script>
     <script type="text/javascript" src="shapefile_transforms.js"></script>
     <script type="text/javascript" src="shapefile_render2d.js"></script>
