--- a/index.html
+++ b/index.html
@@ -28,21 +28,68 @@
     <script type="text/javascript" src="shapefile_render2d.js"></script>
 
     <script type="text/javascript">
+      function fixPoint () {
+        toOrtho.call (this);
+        scale.call (this, 400);
+        shift.call (this, 400);
+        invert.call (this, 800, 1);
+        //deAlias.call (this);
+      }
+
+      function drawLats (screen, color) {
+        var context = screen.getContext ("2d");
+        context.strokeStyle = color.to_rgb_string ();
+
+        for (var lat = -90; lat <= 90; lat += 10) {
+          var startPoint = [lat, 0];
+          fixPoint.call (startPoint);
+          context.moveTo (startPoint[0], startPoint[1]);
+          context.beginPath ();
+
+          for (var lon = 0; lon <= 360; lon += 1) {
+            var point = [lat, lon];
+            fixPoint.call (point);
+            context.lineTo (point[0], point[1]);
+          }
+          context.stroke ();
+          context.closePath ();
+        }
+      };
+
+      function drawLons (screen, color) {
+        var context = screen.getContext ("2d");
+        context.strokeStyle = color.to_rgb_string ();
+
+        for (var lon = 0; lon <= 360; lon += 10) {
+          var startPoint = [-90, lon];
+          fixPoint.call (startPoint);
+          context.moveTo (startPoint[0], startPoint[1]);
+          context.beginPath ();
+
+          for (var lat = -90; lat <= 90; lat += 1) {
+            var point = [lat, lon];
+            fixPoint.call (point);
+            context.lineTo (point[0], point[1]);
+          }
+          context.stroke ();
+          context.closePath ();
+        }
+      };
+
       function ready () {
         var screen = document.getElementById ("screen");
         if (screen.getContext) {
           try {
             var shapeFileName = "shapefiles/northamerica_adm0";
-            //var shapeFileName = "shapefiles/world_borders";
             var shapeFile = new ShapeFile (shapeFileName);
             
-            shapeFile.eachVertex (toOrtho);
-            shapeFile.eachVertex (scale, screen.width / 2);
-            shapeFile.eachVertex (shift, screen.width / 2);
-            shapeFile.eachVertex (invert, screen.height, 1);
-            shapeFile.eachVertex (deAlias);
+            shapeFile.eachVertex (fixPoint);
 
-            shapeFile.eachShape (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00, 0x00));
+            shapeFile.eachShape (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00));
+
+            var llColor = new Color (0x00, 0x00, 0x00);
+            drawLats (screen, llColor);
+            drawLons (screen, llColor);
 
           } catch (error) {
             var messages = document.getElementById ("messages");
