pushed the modelType parameter into buildModels.

--- a/webgl.html
+++ b/webgl.html
@@ -78,7 +78,7 @@
           shapeFile.eachVertex (scale, scalingFactor);
 
           drawAxis ();
-          shapeFile.eachShape (buildModels, $W.GL.LINES, [1, 0, 0]);
+          shapeFile.eachShape (buildModels, [1, 0, 0]);
 
           drawLats ();
           drawLons ();
