--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -21,12 +21,12 @@
 
 <html>
   <head>
-    <script type="text/javascript" src="external/prototype.js"></script>
-    <script type="text/javascript" src="external/binaryReader.js"></script>
-    <script type="text/javascript" src="shapefile.js"></script>
-    <script type="text/javascript" src="shapefile_transforms.js"></script>
-    <script type="text/javascript" src="shapefile_model_builders.js"></script>
-    <script type="text/javascript" src="external/webglu/src/webglu.js"></script>
+    <script type="text/javascript" src="../external/prototype.js"></script>
+    <script type="text/javascript" src="../external/binaryReader.js"></script>
+    <script type="text/javascript" src="../shapefile.js"></script>
+    <script type="text/javascript" src="../shapefile_transforms.js"></script>
+    <script type="text/javascript" src="../shapefile_model_builders.js"></script>
+    <script type="text/javascript" src="../external/webglu/src/webglu.js"></script>
 
     <script type="text/javascript">
       var scalingFactor = 3;
@@ -74,7 +74,7 @@
         $W.camera.setPosition (2, 2, 5);
 
         try {
-          var shapeFileName = "shapefiles/northamerica_adm0";
+          var shapeFileName = "../shapefiles/northamerica_adm0";
           var shapeFile = new ShapeFile (shapeFileName);
           
           shapeFile.eachVertex (fixPoint);
