renamed the js files

--- a/examples/render2d.html
+++ b/examples/render2d.html
@@ -24,8 +24,8 @@
     <script type="text/javascript" src="../external/prototype.js"></script>
     <script type="text/javascript" src="../external/binaryReader.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
-    <script type="text/javascript" src="../shapefile_transforms.js"></script>
-    <script type="text/javascript" src="../shapefile_render2d.js"></script>
+    <script type="text/javascript" src="../transforms.js"></script>
+    <script type="text/javascript" src="../render2d.js"></script>
 
     <script type="text/javascript">
       function fixPoint () {
