--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -24,8 +24,8 @@
     <script type="text/javascript" src="../external/prototype.js"></script>
     <script type="text/javascript" src="../external/binaryReader.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
-    <script type="text/javascript" src="../shapefile_transforms.js"></script>
-    <script type="text/javascript" src="../shapefile_model_builders.js"></script>
+    <script type="text/javascript" src="../transforms.js"></script>
+    <script type="text/javascript" src="../model_builders.js"></script>
     <script type="text/javascript" src="../external/webglu/src/webglu.js"></script>
 
     <script type="text/javascript">
