--- a/examples/render2d.html
+++ b/examples/render2d.html
@@ -23,17 +23,14 @@
   <head>
     <script type="text/javascript" src="../external/prototype.js"></script>
     <script type="text/javascript" src="../external/binaryReader.js"></script>
+    <script type="text/javascript" src="../external/functional_arrays.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
     <script type="text/javascript" src="../transforms.js"></script>
     <script type="text/javascript" src="../render2d.js"></script>
 
     <script type="text/javascript">
-      function fixPoint () {
-        toOrtho.call (this);
-        scale.call (this, 400);
-        shift.call (this, 400);
-        invert.call (this, 800, 1);
-        //deAlias.call (this);
+      function fixVertex (vertex) {
+        return invert (shift (scale (toOrtho (vertex), 400), 400), 800, 1);
       }
 
       function drawLats (screen, color) {
@@ -41,14 +38,12 @@
         context.strokeStyle = color.to_rgb_string ();
 
         for (var lat = -90; lat <= 90; lat += 10) {
-          var startPoint = [lat, 0];
-          fixPoint.call (startPoint);
-          context.moveTo (startPoint[0], startPoint[1]);
+          var startPoint = fixVertex ([lat, 0]);
           context.beginPath ();
+          context.moveTo (startPoint[0], startPoint[1]);
 
           for (var lon = 0; lon <= 360; lon += 1) {
-            var point = [lat, lon];
-            fixPoint.call (point);
+            var point = fixVertex ([lat, lon]);
             context.lineTo (point[0], point[1]);
           }
           context.stroke ();
@@ -61,14 +56,12 @@
         context.strokeStyle = color.to_rgb_string ();
 
         for (var lon = 0; lon <= 360; lon += 10) {
-          var startPoint = [-90, lon];
-          fixPoint.call (startPoint);
-          context.moveTo (startPoint[0], startPoint[1]);
+          var startPoint = fixVertex ([-90, lon]);
           context.beginPath ();
+          context.moveTo (startPoint[0], startPoint[1]);
 
           for (var lat = -90; lat <= 90; lat += 1) {
-            var point = [lat, lon];
-            fixPoint.call (point);
+            var point = fixVertex ([lat, lon]);
             context.lineTo (point[0], point[1]);
           }
           context.stroke ();
@@ -83,9 +76,9 @@
             var shapeFileName = "../shapefiles/northamerica_adm0";
             var shapeFile = new ShapeFile (shapeFileName);
             
-            shapeFile.eachVertex (fixPoint);
+            shapeFile.shapes.for_each (function (shape) { shape.eachVertex (fixVertex); });
 
-            shapeFile.eachShape (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00));
+            shapeFile.shapes.for_each (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00));
 
             var llColor = new Color (0x00, 0x00, 0x00);
             drawLats (screen, llColor);
