--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -23,84 +23,126 @@
   <head>
     <script type="text/javascript" src="../external/prototype.js"></script>
     <script type="text/javascript" src="../external/binaryReader.js"></script>
+    <script type="text/javascript" src="../external/functional_arrays.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
     <script type="text/javascript" src="../transforms.js"></script>
     <script type="text/javascript" src="../model_builders.js"></script>
     <script type="text/javascript" src="../external/webglu/src/webglu.js"></script>
 
     <script type="text/javascript">
-      var scalingFactor = 3;
+      var scalingFactor = 5;
 
-      function fixPoint () {
-        toWebGL.call (this);
-        scale.call (this, scalingFactor);
+      function fixVertex (vertex) {
+        return scale (toWebGL (vertex), scalingFactor);
       }
 
       function drawAxis () {
         var vertices = [[0, 0, -50], [0, 0, 50], [0, -50, 0], [0, 50, 0], [-50, 0, 0], [50, 0, 0]];
         var colors = [[1, 0, 0], [1, 0, 0], [0, 1, 0], [0, 1, 0], [0, 0, 1], [0, 0, 1]];
-        buildModel ($W.GL.LINES, vertices, colors, false);
+        return buildModel ($W.GL.LINES, vertices, colors);
       }
 
       function drawLats (screen) {
         var vertices = new Array ();
         for (var lat = -90; lat <= 90; lat += 10) {
           for (var lon = 0; lon <= 360; lon += 5) {
-            vertex = [lat, lon];
-            fixPoint.call (vertex);
+            var vertex = fixVertex ([lat, lon]);
             vertices.push (vertex);
             if (lon != 0 && lon != 360) vertices.push (vertex);
           }
         }
-        var model = buildModel ($W.GL.LINES, vertices, makeVertexColors (vertices, [0, 0, 0]), true);
+        return buildModel ($W.GL.LINES, vertices, [[0, 0, 0]]);
       };
 
       function drawLons (screen) {
         var vertices = new Array ();
         for (var lon = 0, j = 0; lon <= 360; lon += 10) {
           for (var lat = -90; lat <= 90; lat += 5) {
-            vertex = [lat, lon];
-            fixPoint.call (vertex);
+            var vertex = fixVertex ([lat, lon]);
             vertices.push (vertex);
             if (lat != -90 && lat != 90) vertices.push (vertex);
           }
         }
-        var model = buildModel ($W.GL.LINES, vertices, makeVertexColors (vertices, [0, 0, 0]), true);
+        return buildModel ($W.GL.LINES, vertices, [[0, 0, 0]]);
       };
 
       function ready () {
         if (!$W.initialize ()) return;
         $W.GL.clearColor (0.9, 0.9, 0.9, 1.0);
-        $W.camera.setPosition (2, 2, 5);
+        $W.camera.setPosition (2, 5, 6.5);
+        $W.camera.setTarget (0, 0, 0);
+        $W.useGameGLU();
+
+        var axisModel;
+        var shapeFile;
+        var latModel;
+        var lonModel;
 
         try {
-          var shapeFileName = "../shapefiles/northamerica_adm0";
-          var shapeFile = new ShapeFile (shapeFileName);
-          
-          shapeFile.eachVertex (fixPoint);
+          shapeFile = new ShapeFile ("../shapefiles/northamerica_adm0");
+          shapeFile.shapes.for_each (function (shape) { shape.eachVertex (fixVertex); });
 
-          drawAxis ();
-          shapeFile.eachShape (buildModels, [1, 0, 0]);
-
-          drawLats ();
-          drawLons ();
+          axisModel = drawAxis ();
+          shapeFile.shapes.for_each (buildModels, [[1, 0, 0]]);
+          latModel = drawLats ();
+          lonModel = drawLons ();
 
         } catch (error) {
           document.getElementById ("messages").innerHTML = error;
           console.log (error);
         }
 
-        $W.update = function () {
-          document.getElementById ("messages").innerHTML = $W.FPS;
-        }
+        var location = new Array (3);
+        var xRot = 0;
+        var yRot = 0;
+
+        $G.event.bind('left', function() {
+          xRot += 1;
+          if (xRot > 360) xRot = 0;
+          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
+          latModel.setRotation (xRot, yRot, 0);
+          lonModel.setRotation (xRot, yRot, 0);
+        });
+
+        $G.event.bind('right', function() {
+          xRot -= 1;
+          if (xRot < -360) xRot = 0;
+          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
+          latModel.setRotation (xRot, yRot, 0);
+          lonModel.setRotation (xRot, yRot, 0);
+        });
+
+        $G.event.bind('up', function() {
+          yRot += 1;
+          if (yRot > 360) yRot = 0;
+          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
+          latModel.setRotation (xRot, yRot, 0);
+          lonModel.setRotation (xRot, yRot, 0);
+        });
+
+        $G.event.bind('down', function() {
+          yRot -= 1;
+          if (yRot < -360) yRot = 0;
+          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
+          latModel.setRotation (xRot, yRot, 0);
+          lonModel.setRotation (xRot, yRot, 0);
+        });
+
+        $G.event.bind('r', function() {
+          xRot = 0;
+          yRot = 0;
+          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
+          latModel.setRotation (xRot, yRot, 0);
+          lonModel.setRotation (xRot, yRot, 0);
+        });
 
         $W.start ();
       }
     </script>
   </head>
   <body onLoad="ready ();">
-    <div id="messages" width="800" height="800" z-index="10"></div>
-    <canvas id="canvas" width="800" height="800" z-index="0">
+    <div id="messages" width="1200" height="800" z-index="10"></div>
+    <canvas id="canvas" width="1200" height="800" z-index="0">
       Your browser doesn't support canvas.
     </canvas>
   </body>
