--- a/examples/render2d.html
+++ b/examples/render2d.html
@@ -55,7 +55,7 @@
         var context = screen.getContext ("2d");
         context.strokeStyle = color.to_rgb_string ();
 
-        for (var lon = 0; lon <= 360; lon += 10) {
+        for (var lon = 0; lon < 360; lon += 10) {
           var startPoint = fixVertex ([-90, lon]);
           context.beginPath ();
           context.moveTo (startPoint[0], startPoint[1]);
@@ -80,7 +80,7 @@
 
             shapeFile.shapes.for_each (render, screen.getContext ("2d"), new Color (0xFF, 0x00, 0x00));
 
-            var llColor = new Color (0x00, 0x00, 0x00);
+            var llColor = new Color (0, 0, 0);
             drawLats (screen, llColor);
             drawLons (screen, llColor);
 
