Created a rotate function to simplify the code.

--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -56,7 +56,7 @@
 
       function drawLons (screen) {
         var vertices = new Array ();
-        for (var lon = 0, j = 0; lon <= 360; lon += 10) {
+        for (var lon = 0, j = 0; lon < 360; lon += 10) {
           for (var lat = -90; lat <= 90; lat += 5) {
             var vertex = fixVertex ([lat, lon]);
             vertices.push (vertex);
@@ -65,6 +65,12 @@
         }
         return makeModel ($W.GL.LINES, vertices, makeVertexColors (vertices, [0, 0, 0]));
       };
+
+      function rotate (shapeFile, latModel, lonModel, xRot, yRot) {
+        shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
+        latModel.setRotation (xRot, yRot, 0);
+        lonModel.setRotation (xRot, yRot, 0);
+      }
 
       function ready () {
         if (!$W.initialize ()) return;
@@ -93,47 +99,39 @@
         }
 
         var location = new Array (3);
-        var xRot = 0;
+        var xRot = -25;
         var yRot = 0;
+
+        rotate (shapeFile, latModel, lonModel, xRot, yRot);
 
         $G.event.bind('left', function() {
           xRot += 1;
           if (xRot > 360) xRot = 0;
-          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
-          latModel.setRotation (xRot, yRot, 0);
-          lonModel.setRotation (xRot, yRot, 0);
+          rotate (shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('right', function() {
           xRot -= 1;
           if (xRot < -360) xRot = 0;
-          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
-          latModel.setRotation (xRot, yRot, 0);
-          lonModel.setRotation (xRot, yRot, 0);
+          rotate (shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('up', function() {
           yRot += 1;
           if (yRot > 360) yRot = 0;
-          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
-          latModel.setRotation (xRot, yRot, 0);
-          lonModel.setRotation (xRot, yRot, 0);
+          rotate (shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('down', function() {
           yRot -= 1;
           if (yRot < -360) yRot = 0;
-          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
-          latModel.setRotation (xRot, yRot, 0);
-          lonModel.setRotation (xRot, yRot, 0);
+          rotate (shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('r', function() {
-          xRot = 0;
+          xRot = -25;
           yRot = 0;
-          shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
-          latModel.setRotation (xRot, yRot, 0);
-          lonModel.setRotation (xRot, yRot, 0);
+          rotate (shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $W.start ();
