Renamed transforms to coordinate_transforms and created its own project.

--- a/examples/render2d.html
+++ b/examples/render2d.html
@@ -24,8 +24,9 @@
     <script type="text/javascript" src="../external/prototype.js"></script>
     <script type="text/javascript" src="../external/binaryReader.js"></script>
     <script type="text/javascript" src="../external/functional_arrays.js"></script>
+    <script type="text/javascript" src="../external/coordinate_transforms.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
-    <script type="text/javascript" src="../transforms.js"></script>
+    <script type="text/javascript" src="../readers.js"></script>
     <script type="text/javascript" src="../render2d.js"></script>
 
     <script type="text/javascript">
