Moved model_builders.js and render2d.js to the examples directory.

--- a/examples/render2d.html
+++ b/examples/render2d.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../external/coordinate_transforms.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
     <script type="text/javascript" src="../readers.js"></script>
-    <script type="text/javascript" src="../render2d.js"></script>
+    <script type="text/javascript" src="../examples/render2d.js"></script>
 
     <script type="text/javascript">
       function fixVertex (vertex) {
