--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../external/coordinate_transforms.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
     <script type="text/javascript" src="../readers.js"></script>
-    <script type="text/javascript" src="../model_builders.js"></script>
+    <script type="text/javascript" src="../examples/model_builders.js"></script>
     <script type="text/javascript" src="../external/webglu/src/webglu.js"></script>
 
     <script type="text/javascript">
