Added globe model.

--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -43,31 +43,48 @@
         return makeModel ($W.GL.LINES, vertices, colors);
       }
 
-      function drawLats (screen) {
+      function drawGlobe () {
         var vertices = new Array ();
-        for (var lat = -90; lat <= 90; lat += 10) {
+        for (var lat = -90; lat <= 90; lat += 5) {
           for (var lon = 0; lon <= 360; lon += 5) {
+            vertices.push (fixVertex ([lat, lon]));
+            vertices.push (fixVertex ([lat + 10, lon]));
+          }
+        }
+        return makeModel ($W.GL.TRIANGLE_STRIP, vertices, makeVertexColors (vertices, [0, 0, 1]));
+      }
+
+      function drawLats () {
+        var vertices = new Array ();
+        var colors = new Array ();
+        for (var lat = -90; lat <= 90; lat += 10) {
+          for (var lon = 0; lon <= 360; lon += 1) {
             var vertex = fixVertex ([lat, lon]);
             vertices.push (vertex);
-            if (lon != 0 && lon != 360) vertices.push (vertex);
+            colors.push ((lat == 0) ? [1, 0, 0] : [0, 0, 0]);
+            if (lon != 0 && lon != 360) {
+              vertices.push (vertex);
+              colors.push ((lat == 0) ? [1, 0, 0] : [0, 0, 0]);
+            }
           }
         }
         return makeModel ($W.GL.LINES, vertices, makeVertexColors (vertices, [0, 0, 0]));
-      };
+      }
 
-      function drawLons (screen) {
+      function drawLons () {
         var vertices = new Array ();
         for (var lon = 0, j = 0; lon < 360; lon += 10) {
-          for (var lat = -90; lat <= 90; lat += 5) {
+          for (var lat = -90; lat <= 90; lat += 1) {
             var vertex = fixVertex ([lat, lon]);
             vertices.push (vertex);
             if (lat != -90 && lat != 90) vertices.push (vertex);
           }
         }
         return makeModel ($W.GL.LINES, vertices, makeVertexColors (vertices, [0, 0, 0]));
-      };
+      }
 
-      function rotate (shapeFile, latModel, lonModel, xRot, yRot) {
+      function rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot) {
+        globeModel.setRotation (xRot, yRot, 0);
         shapeFile.shapes.forEach (function (shape) { shape.model.setRotation (xRot, yRot, 0); });
         latModel.setRotation (xRot, yRot, 0);
         lonModel.setRotation (xRot, yRot, 0);
@@ -81,6 +98,7 @@
         $W.useGameGLU();
 
         var axisModel;
+        var globeModel;
         var shapeFile;
         var latModel;
         var lonModel;
@@ -90,6 +108,7 @@
           shapeFile.shapes.for_each (function (shape) { shape.eachVertex (fixVertex); });
 
           axisModel = drawAxis ();
+          globeModel = drawGlobe ();
           shapeFile.shapes.for_each (buildModels, [1, 0, 0]);
           latModel = drawLats ();
           lonModel = drawLons ();
@@ -103,36 +122,36 @@
         var xRot = -25;
         var yRot = 0;
 
-        rotate (shapeFile, latModel, lonModel, xRot, yRot);
+        rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot);
 
         $G.event.bind('left', function() {
           xRot += 1;
           if (xRot > 360) xRot = 0;
-          rotate (shapeFile, latModel, lonModel, xRot, yRot);
+          rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('right', function() {
           xRot -= 1;
           if (xRot < -360) xRot = 0;
-          rotate (shapeFile, latModel, lonModel, xRot, yRot);
+          rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('up', function() {
           yRot += 1;
           if (yRot > 360) yRot = 0;
-          rotate (shapeFile, latModel, lonModel, xRot, yRot);
+          rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('down', function() {
           yRot -= 1;
           if (yRot < -360) yRot = 0;
-          rotate (shapeFile, latModel, lonModel, xRot, yRot);
+          rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $G.event.bind('r', function() {
           xRot = -25;
           yRot = 0;
-          rotate (shapeFile, latModel, lonModel, xRot, yRot);
+          rotate (globeModel, shapeFile, latModel, lonModel, xRot, yRot);
         });
 
         $W.start ();
