--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -22,7 +22,8 @@
 <html>
   <head>
     <script type="text/javascript" src="../external/prototype.js"></script>
-    <script type="text/javascript" src="../external/binaryReader.js"></script>
+    <script type="text/javascript" src="../external/jdataview.js"></script>
+    <script type="text/javascript" src="../external/jdataview_reader.js"></script>
     <script type="text/javascript" src="../external/functional_arrays.js"></script>
     <script type="text/javascript" src="../external/coordinate_transforms.js"></script>
     <script type="text/javascript" src="../shapefile.js"></script>
