Added an info panel to display key bindings.

--- a/examples/webgl.html
+++ b/examples/webgl.html
@@ -164,6 +164,11 @@
     <canvas id="canvas" width="1200" height="800" z-index="0">
       Your browser doesn't support canvas.
     </canvas>
+    <div>
+      <img src="../examples/images/arrow-1-left.png" border="0"> <img src="../examples/images/arrow-1-right_0.png" border="0"> rotates the globe to the left or the right<br>
+      <img src="../examples/images/arrow-1-up_0.png" border="0"> <img src="../examples/images/arrow-1-down.png" border="0"> rotates the globe up or down<br>
+      r resets the globe to the original position.
+    </div>
   </body>
 </html>
 
